added file for The Intelligent Code Completion

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   },
   "dependencies": {
     "cypress-real-events": "^1.7.1"
-  }
+  },
+  
+    "include": ["./node_modules/cypress", "cypress/**/*.js"]
+  
 }
